# obs-custom-ffmpeg-audio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
github/workflows/: build.yml
obs-custom-ffmpeg-audio/: CMakeLists.txt  obs-custom-ffmpeg-audio-config-dialog.cpp  obs-custom-ffmpeg-audio-config-dialog.hpp  obs-custom-ffmpeg-audio-encoder.cpp  obs-custom-ffmpeg-audio-encoder.hpp  obs-custom-ffmpeg-audio-plugin-main.cpp
obs-custom-ffmpeg-audio/data/locale/: en-US.ini  zh-CN.ini
